Fix T55204: proxy object disappearing randomly.

The problem was a missing depsgraph relation between the transforms of
the object and its proxy, it was only there for the pose.